Finalização da api + toques finais

--- a/public/blog.html
+++ b/public/blog.html
@@ -90,7 +90,7 @@
         <div class="postagem">
             <span style="text-decoration: underline;">${post.nome}</span>
             <h3><b>${post.titulo}</b></h3>
-            <p>${post.descricao}</p>
+            <span>${post.descricao}</span>
             <br>
         </div>
         `;
