--- a/public/dashboard/contaBlog.html
+++ b/public/dashboard/contaBlog.html
@@ -24,6 +24,7 @@
             </div>
             <a href="./contaHome.html">Home</a>
             <a href="./starSystem.html">Sobre ORV</a>
+            <a href="./estatisticasConta.html">Estatísticas</a>
         </div>
 
         <div class="navbarRight">
