--- a/public/dashboard/estatisticasConta.html
+++ b/public/dashboard/estatisticasConta.html
@@ -5,37 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estatísticas</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-
-
     <div class="navbar">
+
         <div class="navbarLeft">
-            <img src="./imagens/1.png" alt="" style="height: 50px;">
-            <h3>Dokkaebi Central</h3>
+          <img src="./../imagens/1.png" alt="" style="height: 50px;">
+          <h3>Dokkaebi Central</h3>
         </div>
-
+    
         <div class="navbarMiddle">
-            <div style="display: flex; align-items: center;">
-                <a href="./index.html">Home</a>
-            </div>
-            <a href="./sobreORV.html">Sobre ORV</a>
-            <a href="./blog.html">Feed</a>
-            <div style="display: flex; align-items: center;">
-                <b><a href="./estatisticas.html" style="text-decoration: underline;">Estatísticas</a></b>
-                <img src="./imagens/star.png" alt="" style="height: 20px;">
-            </div>
-        </div>
-
-        <!-- login e cadastro -->
-
+          <a href="./contaBlog.html">Postar</a>
+          <a href="./contaHome.html">Home</a>
+          <a href="./starSystem.html">Sobre ORV</a>
+          <div style="display: flex; align-items: center;">
+              <b><a href="./estatisticasConta.html" style="text-decoration: underline;">Estatísticas</a></b>
+              <img src="./../imagens/star.png" alt="" style="height: 20px;">
+          </div>
+          </div>
+    
         <div class="navbarRight">
-            <a href="./login.html">Login</a>
-            |
-            <a href="./cadastro.html">Cadastro</a>
+            <a href="./conta.html">Conta</a>
+          <a href="./../index.html">Sair</a>
+          <div>
+            <img src="./../imagens/avatar-svgrepo-com.png" alt="" style="width: 40px;">
+          </div>
         </div>
+      </div>
+      <div>
     </div>
     </div>
 
