--- a/public/dashboard/starsystem.html
+++ b/public/dashboard/starsystem.html
@@ -24,6 +24,7 @@
                 <b><a href="./starSystem.html" style="text-decoration: underline;">Sobre ORV</a></b>
                 <img src="./../imagens/star.png" alt="" style="height: 20px;">
             </div>
+            <a href="./estatisticasConta.html">Estatísticas</a>
         </div>
 
         <div class="navbarRight">
