--- a/public/dashboard/contaHome.html
+++ b/public/dashboard/contaHome.html
@@ -27,6 +27,7 @@
                 <img src="./../imagens/star.png" alt="" style="height: 20px;">
             </div>
             <a href="./starSystem.html">Sobre ORV</a>
+            <a href="./estatisticasConta.html">Estatísticas</a>
         </div>
 
         <div class="navbarRight">
