--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -177,7 +177,7 @@
             var email = iptEmail.value;
             var mensagem = "";
 
-            if(email.includes('@') && email.includes('.com') || email == ""){
+            if(email.includes('@') && email.includes('.') || email == ""){
 
             } else {
                 mensagem = "<span style='color: red;'>Email inválido.</span>"
