--- a/public/dashboard/starsystem.html
+++ b/public/dashboard/starsystem.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../css/dashboard.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="imgsheet" href="./../imagens">
     <title>Document</title>
 </head>
@@ -41,9 +41,6 @@
             </div>
         </div>
     </div>
-
-    <div class="box1">
-
         <div class="viewSobreORV">
             <div class="banner">
                 <div class="container-sobreORV">
@@ -82,37 +79,43 @@
                             tornar realidade.
                         </p>
                         <div>
-                            A novel somente está disponível em Ingles e Coreano:
-                            <a href="https://www.webnovel.com/book/28953675500945105/catalog"
-                                style="text-decoration: underline; color: darkgray;">Leia a novel aqui!</a>
+                            A novel e os quadrinhos somente estão disponível em Ingles ou Coreano:
+                            <br>
+                            <a href="https://www.webnovel.com/book/28953675500945105/catalog" style="text-decoration: underline; color: darkgray;">Leia a novel aqui!</a> <br> 
+                            <a href="https://www.webtoons.com/en/action/omniscient-reader/list?title_no=2154" style="text-decoration: underline; color: darkgray;">Leia o Manhwa aqui!</a>
                         </div>
                     </div>
                     <br>
 
-                    <div style="background-color: black; color: white; border-radius: 20px;">
-                        <h2>O apocalipse</h2>
-                        <br>
-                        <p>O apocalipse consiste em um sistema de estrelas, no qual é disponibilizado aos
-                            “participantes” do
-                            apocalipse cenários os quais eles precisam sobreviver, os dando uma recompensa caso
-                            sobrevivam.
-                            Os participantes são chamados de Encarnações, e durante sua participação nos cenários, eles
-                            são
-                            assistidos e patrocinados pelas Constelações, que podem oferecer às Encarnações habilidades
-                            especiais. Elas podem ser constelações Históricas (tais como famosos guerreiros na história
-                            da
-                            Coreia), Fábulas (temos como exemplo, o anjo Uriel) e Míticas (como os Zeus do Olympus).
-                            Apesar
-                            dos exemplos, anjos e Deuses do Olympus também podem ser constelações Míticas ou Fábulas,
-                            como
-                            Michael ou Perséfone. Essas nomenclaturas nada mais são que um ranking dessas constelações,
-                            servindo para medir seu poder com relação às outras. Um ranking que não foi citado, foi os
-                            Deuses de Fora, que seriam entidades esquecidas ou descartadas de “Rodadas” passada na Web
-                            Novel
-                            original (TWSA). Um Deus de Fora que não estava presente na novel original, é o “Secretive
-                            Plotter”, na tradução literal, Conspirador Secreto, que está competindo com outras
-                            constelações
-                            para ser o patrocinador de Kim Dokja.</p>
+                    <div style="background-color: black; color: white; border-radius: 20px;" class="apocalipseContainer">
+                        <div style="width: 70vw;">
+                            <h2>O apocalipse</h2>
+                            <br>
+                            <p>O apocalipse consiste em um sistema de estrelas, no qual é disponibilizado aos
+                                “participantes” do
+                                apocalipse cenários os quais eles precisam sobreviver, os dando uma recompensa caso
+                                sobrevivam.
+                                Os participantes são chamados de Encarnações, e durante sua participação nos cenários, eles
+                                são
+                                assistidos e patrocinados pelas Constelações, que podem oferecer às Encarnações habilidades
+                                especiais. Elas podem ser constelações Históricas (tais como famosos guerreiros na história
+                                da
+                                Coreia), Fábulas (temos como exemplo, o anjo Uriel) e Míticas (como os Zeus do Olympus).
+                                Apesar
+                                dos exemplos, anjos e Deuses do Olympus também podem ser constelações Míticas ou Fábulas,
+                                como
+                                Michael ou Perséfone. Essas nomenclaturas nada mais são que um ranking dessas constelações,
+                                servindo para medir seu poder com relação às outras. Um ranking que não foi citado, foi os
+                                Deuses de Fora, que seriam entidades esquecidas ou descartadas de “Rodadas” passada na Web
+                                Novel
+                                original (TWSA). Um Deus de Fora que não estava presente na novel original, é o “Secretive
+                                Plotter”, na tradução literal, Conspirador Secreto, que está competindo com outras
+                                constelações
+                                para ser o patrocinador de Kim Dokja.</p>
+                        </div>
+                        <div class="apocalipseBox">
+                            
+                        </div>
                     </div>
                 </div>
 
@@ -172,6 +175,8 @@
                     </div>
                 </div>
             </div>
+
+            <div style="height: 200px;"></div>
 
             <div style="display: flex; justify-content: center;">
                 <img src="./imagens/personagens-devider.png" alt="" style="width: 1400px;">
