--- a/public/index.html
+++ b/public/index.html
@@ -91,13 +91,12 @@
 
     <div class="boxImpacto">
         <div class="boxImpactoTexto">
-            <h2>Impacto</h2>
-            <div>
-                <h3>Por que e como ORV impacta na Educação de Qualidade?</h3>
-                <p>A leitura de livros é extremamente benéfica para a educação, podendo, a partir tanto da história quanto da forma que ela for escrita, aumentar o vocabulário do leitor, auxiliá-lo na criação de um pensamento crítico, desenvolver habilidades tais como concentração, raciocínio e imaginação e conscientizar sobre diversos aspectos da sociedade. Ademais, vale citar que a leitura fornece ao leitor uma diversificação de interpretações, ajudando na criação de pensamento crítico e imaginação. Omniscient Readers Viewpoint entra na educação e qualidade por, além de fornecer uma história repleta de imaginação e reviravoltas, ser uma história contada a partir do ponto de vista de um leitor, que aprende com os próprios erros, é forçado a se adaptar em um ambiente completamente diferente do seu no dia a dia e encarar problemas que requerem complexas soluções, sempre mantendo sua cabeça alta.</p>
+            <div style="display: flex;">
+                <img src="./imagens/educaçãoODS.png" alt="ODS-Educação-de-Qualidade" style="border-radius: 20px; width: 120px;">
             </div>
             <div>
-                <img src="./imagens/educaçãoODS.png" alt="ODS-Educação-de-Qualidade" style="border-radius: 20px; width: 120px;">
+                <h3>De que forma ORV pode impactar?</h3>
+                <p>A leitura de livros é extremamente benéfica para a educação, podendo, a partir tanto da história quanto da forma que ela for escrita, aumentar o vocabulário do leitor, auxiliá-lo na criação de um pensamento crítico, desenvolver habilidades tais como concentração, raciocínio e imaginação e conscientizar sobre diversos aspectos da sociedade. Ademais, vale citar que a leitura fornece ao leitor uma diversificação de interpretações, ajudando na criação de pensamento crítico e imaginação. Omniscient Readers Viewpoint entra na educação e qualidade por, além de fornecer uma história repleta de imaginação e reviravoltas, ser uma história contada a partir do ponto de vista de um leitor, que aprende com os próprios erros, é forçado a se adaptar em um ambiente completamente diferente do seu no dia a dia e encarar problemas que requerem complexas soluções, sempre mantendo sua cabeça alta.</p>
             </div>
         </div>
         <div class="boxImpactoImg">
