--- a/public/sobreORV.html
+++ b/public/sobreORV.html
@@ -74,22 +74,35 @@
                 </div>
                 <br>
 
-                <div style="background-color: black; color: white; border-radius: 20px;">
-                    <h2>O apocalipse</h2>
-                    <br>
-                    <p>O apocalipse consiste em um sistema de estrelas, no qual é disponibilizado aos “participantes” do
-                        apocalipse cenários os quais eles precisam sobreviver, os dando uma recompensa caso sobrevivam.
-                        Os participantes são chamados de Encarnações, e durante sua participação nos cenários, eles são
-                        assistidos e patrocinados pelas Constelações, que podem oferecer às Encarnações habilidades
-                        especiais. Elas podem ser constelações Históricas (tais como famosos guerreiros na história da
-                        Coreia), Fábulas (temos como exemplo, o anjo Uriel) e Míticas (como os Zeus do Olympus). Apesar
-                        dos exemplos, anjos e Deuses do Olympus também podem ser constelações Míticas ou Fábulas, como
-                        Michael ou Perséfone. Essas nomenclaturas nada mais são que um ranking dessas constelações,
-                        servindo para medir seu poder com relação às outras. Um ranking que não foi citado, foi os
-                        Deuses de Fora, que seriam entidades esquecidas ou descartadas de “Rodadas” passada na Web Novel
-                        original (TWSA). Um Deus de Fora que não estava presente na novel original, é o “Secretive
-                        Plotter”, na tradução literal, Conspirador Secreto, que está competindo com outras constelações
-                        para ser o patrocinador de Kim Dokja.</p>
+                <div style="background-color: black; color: white; border-radius: 20px;" class="apocalipseContainer">
+                    <div style="width: 70vw;">
+                        <h2>O apocalipse</h2>
+                        <br>
+                        <p>O apocalipse consiste em um sistema de estrelas, no qual é disponibilizado aos
+                            “participantes” do
+                            apocalipse cenários os quais eles precisam sobreviver, os dando uma recompensa caso
+                            sobrevivam.
+                            Os participantes são chamados de Encarnações, e durante sua participação nos cenários, eles
+                            são
+                            assistidos e patrocinados pelas Constelações, que podem oferecer às Encarnações habilidades
+                            especiais. Elas podem ser constelações Históricas (tais como famosos guerreiros na história
+                            da
+                            Coreia), Fábulas (temos como exemplo, o anjo Uriel) e Míticas (como os Zeus do Olympus).
+                            Apesar
+                            dos exemplos, anjos e Deuses do Olympus também podem ser constelações Míticas ou Fábulas,
+                            como
+                            Michael ou Perséfone. Essas nomenclaturas nada mais são que um ranking dessas constelações,
+                            servindo para medir seu poder com relação às outras. Um ranking que não foi citado, foi os
+                            Deuses de Fora, que seriam entidades esquecidas ou descartadas de “Rodadas” passada na Web
+                            Novel
+                            original (TWSA). Um Deus de Fora que não estava presente na novel original, é o “Secretive
+                            Plotter”, na tradução literal, Conspirador Secreto, que está competindo com outras
+                            constelações
+                            para ser o patrocinador de Kim Dokja.</p>
+                    </div>
+                    <div class="apocalipseBox">
+                        
+                    </div>
                 </div>
             </div>
 
@@ -104,7 +117,7 @@
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
                         <h3 style="display: flex; justify-content: center;">Constelações</h3>
-                        <p>as Constelações são entidades poderosas e misteriosas que desempenham um papel fundamental no mundo do apocalipse descrito pela história. Elas são, essencialmente, seres que observam os eventos do mundo e interagem com os humanos e suas histórias de diversas maneiras.</p>
+                        <p>As Constelações são entidades poderosas e misteriosas que desempenham um papel fundamental no mundo do apocalipse descrito pela história. Elas são, essencialmente, seres que observam os eventos do mundo e interagem com os humanos e suas histórias de diversas maneiras.</p>
                     </div>
                     <!-- ----------------------------- -->
                     <div class="subTextsBox">
@@ -130,6 +143,7 @@
                 </div>
             </div>
         </div>
+        <div style="height: 200px;"></div>
 
         <div style="display: flex; justify-content: center;">
             <img src="./imagens/personagens-devider.png" alt="" style="width: 1400px;">
