--- a/public/estatisticas.html
+++ b/public/estatisticas.html
@@ -52,14 +52,13 @@
 
     <div class="textBox">
         <h1>Personagens e Arcos mais Populares</h1>
-        <p>
 
-        </p>
-    </div>
-
-    <div>
-        <h3>Média de Capítulos Lidos</h3>
-        <div id="avgCapitulos">00</div>
+        
+            <div class="mediaContainer">
+                <h3>Média de Capítulos Lidos:</h3>
+                
+                <div id="avgCapitulos">00</div>
+            </div>
     </div>
 
 
